[package]
name = "image-guesser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_wgpu_backend = "0.19"
chrono = "0.4"
pollster = "0.2"
egui = "0.19"
egui_winit_platform = "0.16"
wgpu = "0.13"
winit = "0.27"
rand = "0.8"
egui_extras = { version = "0.19", features = ["image"]}
tinyfiledialogs = "3.0"
enum_dispatch = "0.3.7"
image = { version = "0.24", features = ["jpeg", "png"] }